--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -2,5 +2,5 @@
     <div class="container text-center">
         <h1>Routes y Services</h1>
     </div>
-    <button type="button" class="btn btn-info">Primary</button>
+    <button type="button" (click)="dasboard()" class="btn btn-info">Primary</button>
 </div>
